# home-station-2

./: .gitignore  Cargo.toml  config.example.toml
docs/: setting-up.md
scripts/: pi-build.sh  pi-mount.sh
src/: main.rs
src/driver/: Cargo.toml  README.md  bootstrap.rs  config.rs  constants.rs  lib.rs
src/driver/bootstrap/: create_time_service.rs  create_weather_service.rs  init_logger.rs  mod.rs
src/driver/config/: app.rs  display.rs  services.rs
src/service/: Cargo.toml  README.md  lib.rs  poller.rs
src/service-common/: Cargo.toml  README.md  lib.rs
src/service-common/services/: mod.rs  time.rs  weather.rs
src/service-providers/: Cargo.toml  lib.rs
src/service-providers/airly/: Cargo.toml  README.md  lib.rs
src/service-providers/chrono/: Cargo.toml  README.md  lib.rs
src/service-providers/dark-sky/: Cargo.toml  lib.rs
src/service-providers/dummy/: Cargo.toml  README.md  lib.rs
src/service-providers/open-weather-map/: Cargo.toml  README.md  lib.rs
src/service/poller/: command.rs  token.rs
src/service/services/: README.md
src/service/services/time/: client.rs  mod.rs  request.rs  server.rs
src/service/services/weather/: client.rs  request.rs  server.rs
src/ui/: Cargo.toml  README.md  lib.rs  state.rs
src/ui-framework/: Cargo.toml  README.md  config.rs  lib.rs  scheduler.rs  screen.rs  support.rs  system.rs  textures.rs
src/ui-framework/bootstrap/: assets.rs  conrod.rs  glium.rs  mod.rs
src/ui-framework/navigation/: controller.rs  mod.rs  route.rs  router.rs
src/ui-framework/scheduler/: event_loop.rs  task.rs  task_dispatcher.rs  task_loop.rs
src/ui-framework/screen/: creation_context.rs  screen.rs  setting_context.rs
src/ui-framework/textures/: controller.rs  loader.rs
src/ui/pages/: home.rs  mod.rs
src/ui/pages/home/: route.rs  screen.rs
src/ui/pages/home/screen/widgets/: time.rs  weather.rs
