[package]
name = "home-station-2"
version = "0.1.2"
license = "MIT"
authors = ["Arran France <arran@arranfrance.com>", "Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "src/driver",
    "src/service",
    "src/service-common",
    "src/service-providers",
    "src/service-providers/airly",
    "src/service-providers/chrono",
    "src/service-providers/dark-sky",
    "src/service-providers/dummy",
    "src/service-providers/open-weather-map",
    "src/ui",
    "src/ui-framework",
]

[dependencies]
lib_driver = { path = "src/driver" }
anyhow = "1.0"