[package]
name = "lib_ui_framework"
version = "0.1.0"
license = "MIT"
authors = ["Arran France <arran@arranfrance.com>", "Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]

edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
conrod_core = "0.69"
conrod_glium = "0.69"
conrod_winit = "0.69"
find_folder = "0.3"
glium = "0.24"
image = "0.23"
log = "0.4"
winit = "0.19.1"
anyhow = "1.0"