[package]
name = "lib_ui"
version = "0.1.0"
license = "MIT"
authors = ["Arran France <arran@arranfrance.com>", "Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]

edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
conrod_core = "0.67.0"
conrod_glium = "0.67.0"
conrod_winit = "0.67.0"
find_folder = "0.3.0"
glium = "0.24"
image = "0.23"
lib_service = { path = "../service" }
lib_service_common = { path = "../service-common" }
lib_ui_framework = { path = "../ui-framework" }
log = "0.4"
winit = "0.19.1"