[package]
name = "lib_ui"
version = "0.1.0"
license = "MIT"
authors = ["Arran France <arran@arranfrance.com>", "Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]

edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
conrod_core = "0.69"
lib_service = { path = "../service" }
lib_service_common = { path = "../service-common" }
lib_ui_framework = { path = "../ui-framework" }
log = "0.4"